<?xml version="1.0"?>
<package>
  <name>numob_navigation</name>
  <version>0.0.1</version>
  <description>The numob navigation ros package</description>

  <maintainer email="z@numob.com">Peijun Zhao</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/nuodong/numob_navigation.git</url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <author>Peijun Zhao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>numob_mobile_base</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>acml</run_depend>
  <run_depend>map_server</run_depend>


</package>
